# machinery

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: External-Boost.cmake  External-Easylogging.cmake  External-Googlemock.cmake  External-Googletest.cmake  External-Mosquitto.cmake  External-OpenCV.cmake  External-OpenMax.cmake  External-RaspiCam.cmake  External-Restclient.cmake  External-Userland.cmake  Superbuild.cmake
config/: algorithm.xml  capture.xml  cloud.xml  condition.xml  config.xml  expositor.xml  heuristic.xml  io.xml  stream.xml  timezone.xml
docker/: Dockerfile  Dockerfile-arm  README.md  run.sh  supervisord.conf
exceptions/: Exception.h  Exception.hpp  KerberosException.h  OpenCVException.h  SocketException.h  TinyXMLException.h
include/easylogging/: easylogging++.h
include/encode/: HMAC_SHA1.h  SHA1.h
include/executor/: Executor.h
include/filewatcher/: FileWatcher.h  FileWatcherImpl.h  Guard.h
include/kerberos/: Factory.h  Globals.h  Helper.h  Kerberos.h  System.h  Types.h  jpeg_bench_image.h
include/kerberos/capture/: Capture.h  IPCamera.h  Image.h  RaspiCamera.h  RaspiCamera.h.bu  Stream.h  USBCamera.h  VideoCapture.h
include/kerberos/cloud/: Cloud.h  Dropbox.h  ForwardStream.h  GoogleDrive.h  S3.h  Watcher.h
include/kerberos/machinery/: Machinery.h
include/kerberos/machinery/algorithm/: Algorithm.h  BackgroundSubstraction.h  BackgroundSubtraction.h  DifferentialCollins.h  DifferentialCollinsWithColor.h
include/kerberos/machinery/condition/: Condition.h  Enabled.h  Time.h
include/kerberos/machinery/expositor/: Expositor.h  HullExpositor.h  RectangleExpositor.h
include/kerberos/machinery/heuristic/: Counter.h  Heuristic.h  Sequence.h
include/kerberos/machinery/io/: FileManager.h  Io.h  IoDisk.h  IoGPIO.h  IoMQTT.h  IoMongoDB.h  IoPushbullet.h  IoScript.h  IoTCP.h  IoVideo.h  IoVideoOMX.h  IoWebhook.h  Throttler.h
include/mmapgpio/: mmapGpio.h
include/omxcam/: omxcam.h  omxcam_version.h
logs/: log.stash
scripts/: run.sh
service/: kerberosio.service
src/: CMakeLists.txt  encode.cpp  kerberosio.icns  main.cpp
src/easylogging/: CMakeLists.txt
src/encode/: CMakeLists.txt  HMAC_SHA1.cpp  SHA1.cpp  base64.cpp
src/executor/: CMakeLists.txt  Executor.cpp
src/filewatcher/: CMakeLists.txt  FileWatcherLinux.cpp  FileWatcherOSX.cpp  Guard.cpp
src/kerberos/: CMakeLists.txt  Factory.cpp  Helper.cpp  Kerberos.cpp  System.cpp
src/kerberos/capture/: Capture.cpp  IPCamera.cpp  Image.cpp  RaspiCamera.cpp  Stream.cpp  USBCamera.cpp  VideoCapture.cpp
src/kerberos/cloud/: Cloud.cpp  Dropbox.cpp  Dropbox.py  ForwardStream.cpp  GoogleDrive.cpp  S3.cpp  Watcher.cpp
src/kerberos/machinery/: Machinery.cpp
src/kerberos/machinery/algorithm/: Algorithm.cpp  BackgroundSubstraction.cpp  BackgroundSubtraction.cpp  DifferentialCollins.cpp
src/kerberos/machinery/condition/: Condition.cpp  Enabled.cpp  Time.cpp
src/kerberos/machinery/expositor/: Expositor.cpp  HullExpositor.cpp  RectangleExpositor.cpp
src/kerberos/machinery/heuristic/: Counter.cpp  Heuristic.cpp  Sequence.cpp
src/kerberos/machinery/io/: FileManager.cpp  Io.cpp  IoDisk.cpp  IoGPIO.cpp  IoMQTT.cpp  IoPushbullet.cpp  IoScript.cpp  IoTCP.cpp  IoVideo.cpp  IoVideoOMX.cpp  IoWebhook.cpp  Throttler.cpp
src/mmapgpio/: CMakeLists.txt  mmapGpio.cpp
src/omxcam/: CMakeLists.txt  camera.c  core.c  debug.c  dump_omx.c  error.c  event.c  h264.c  internal.h  jpeg.c  still.c  utils.c  version.c  video.c
src/tinyxml/: CMakeLists.txt
test/: CMakeLists.txt  test_condition_enabled.cpp  test_helper.cpp  test_hull_expositor.cpp  test_main.cpp  test_rectangle_expositor.cpp  test_sequence_heuristic.cpp
test/mocks/kerberos/capture/: MockImage.h
test/script/: gtest_add.cmake
